# diegohq-blog-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/instructions/: journal-backend.instructions.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_content_tables.py  003_add_contact_submissions.py  004_add_code_quest_support.py  005_remove_quest_host_post_slug.py
planning/: AGENT_INSTRUCTIONS.md  API_SPECIFICATION.md  DATABASE_SCHEMA.md  FEATURES.md  GAMIFICATION_MECHANICS.md  MVP_ROLLOUT_PLAN.md  PROJECT_OVERVIEW.md  TECHNICAL_STANDARDS.md  todo.md
scripts/: create_admin.py
src/: __init__.py  config.py  database.py  dependencies.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth.py  contact.py  game.py  health.py  quests.py  router.py  users.py
src/api/v1/content/: __init__.py  admin.py  public.py
src/core/: __init__.py  exceptions.py  rate_limit.py  security.py
src/models/: __init__.py  base.py  contact_submission.py  daily_reward.py  inventory_item.py  post_progress.py  quest_progress.py  quest_submission.py  refresh_token.py  user.py  xp_transaction.py
src/models/content/: __init__.py  desktop_icon.py  desktop_settings.py  item.py  post.py  quest.py  window_content.py
src/repositories/: __init__.py  base.py  daily_reward_repository.py  inventory_repository.py  post_progress_repository.py  quest_progress_repository.py  quest_submission_repository.py  refresh_token_repository.py  user_repository.py  xp_transaction_repository.py
src/repositories/content/: __init__.py  desktop_icon_repository.py  desktop_settings_repository.py  item_repository.py  post_repository.py  quest_repository.py  window_content_repository.py
src/schemas/: __init__.py  auth.py  contact.py  game.py  quest.py  user.py
src/schemas/content/: __init__.py  desktop.py  item.py  post.py  quest.py  window.py
src/services/: __init__.py  ai_service.py  auth_service.py  game_service.py  quest_service.py  user_service.py
src/services/content/: __init__.py  desktop_service.py  item_service.py  post_service.py  quest_content_service.py  window_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_game.py  test_health.py  test_users.py
